@@ -3,6 +3,12 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/03/07
+	* Corrected the define for NK no cardfix (def).
+	* Fixed the char sql server not escaping the server name before inserting
+	  it on the ragsrvinfo table.
+	* Corrected @lvup not doing the party even share check.
+	* Corrected breaker's misc part not ignoring element.
 2007/03/06
 	* Added NK value 0x80: ignore target's cards (0x8 will now only ignore
 	  attacker's cards).
